# credit-default-tabular-transformer

./: .gitignore  CHANGELOG.md  LICENSE  PROJECT_PLAN.md  README.md  SECURITY_AUDIT.md  embedding.py  pyproject.toml  run_pipeline.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
data/: README.md
data/processed/: README.md  SPLIT_HASHES.md  SPLIT_STATS.json  feature_metadata.json  validation_report.json
data/raw/: README.md
docs/: ARCHITECTURE.md  DATA_SHEET.md  MODEL_CARD.md  README.md  REPRODUCIBILITY.md  coursework_spec.md
figures/: README.md
figures/baseline/: README.md
figures/eda/: README.md
figures/evaluation/: README.md
notebooks/: 01_exploratory_data_analysis.ipynb  02_data_preprocessing.ipynb  03_random_forest_benchmark.ipynb  04_train_transformer.ipynb  README.md
results/: README.md  comparison_table.csv  comparison_table.md  evaluate_summary.json  interpret.json  rf_metrics.csv  summary_statistics.tex
results/analysis/: README.md  summary_statistics.csv
results/baseline/: README.md  rf_config.json  rf_cross_validation.csv  rf_feature_importance.csv
results/calibration/: calibration_metrics.csv
results/evaluation/: README.md  interpret.json
results/fairness/: fairness_summary.json
results/mtlm/: README.md
results/pipeline/: README.md
results/repro/: README.md  reproducibility_report.json
results/transformer/: README.md  train_val_test_summary.csv
results/uncertainty/: uncertainty_summary.json
scripts/: README.md  run_all.py  run_pipeline.py
src/: README.md  __init__.py  attention.py  calibration.py  data_preprocessing.py  data_sources.py  dataset.py  eda.py  embedding.py  evaluate.py  fairness.py  interpret.py  losses.py  model.py  mtlm.py  random_forest.py  repro.py  rf_predictions.py  significance.py  tokenizer.py  train.py  train_mtlm.py  transformer.py  uncertainty.py  utils.py  visualise.py
src/analysis/: README.md  __init__.py  eda.py
src/baselines/: README.md  __init__.py  random_forest.py  rf_predictions.py
src/data/: README.md  __init__.py  preprocessing.py  sources.py
src/evaluation/: README.md  __init__.py  calibration.py  evaluate.py  fairness.py  interpret.py  significance.py  uncertainty.py  visualise.py
src/infra/: README.md  __init__.py  repro.py
tests/: README.md  conftest.py  test_attention.py  test_calibration.py  test_dataset.py  test_embedding.py  test_evaluate_ensemble.py  test_fairness.py  test_interpret.py  test_losses.py  test_model.py  test_mtlm.py  test_repro.py  test_rf_predictions.py  test_run_all.py  test_significance.py  test_tokenizer.py  test_train.py  test_train_mtlm.py  test_transformer.py  test_uncertainty.py  test_utils.py  test_visualise.py
(+109 files in other folders)
